@@ -11,7 +11,7 @@
 /* Caption Class */
 .news-item-link{
     width: 100%;
-    background-color: red;
+    background-color: white;
 }
     .news-item-link{
         position: relative;
